src/test/deca/syntax/invalid/insideclass_ins.deca
// Resultats:
// no viable alternative at input 'b='

class A{
    int b;
    b = b+1;
}
